--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/supabase-js": "^2.50.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -56,7 +57,9 @@
     "input-otp": "^1.4.1",
     "lucide-react": "^0.436.0",
     "next": "^15.0.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
+    "openai": "^5.8.1",
     "postgres": "^3.4.4",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-day-picker": "^8.10.1",
@@ -64,6 +67,7 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
+    "sharp": "^0.34.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
