--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "analyze": "ANALYZE=true npm run build",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "npx drizzle-kit migrate",
+    "db:seed": "tsx scripts/seed.ts",
     "prepare": "husky install"
   },
   "dependencies": {
